
7.0  2016-06-22
  - Code name "Nerd Face", this is a major release.
  - Removed squish method from Mojo::ByteStream.
  - Removed squish function from Mojo::Util.
  - Removed support for smart whitespace trimming from all_text and text methods
    in Mojo::DOM.
  - Fixed a few whitespace bugs in Mojo::DOM.

6.66  2016-06-16
  - Fixed support for CONNECT requests without keep alive connections in
    Mojo::UserAgent. (anparker, sri)

6.65  2016-06-14
  - Added password and username methods to Mojo::URL.
  - Updated jQuery to version 3.0.0.
  - Fixed "0" value bug in Mojo::UserAgent::CookieJar. (jamadam)

6.64  2016-06-09
  - Updated HTML5 entities in Mojo::Util.
  - Improved Mojo::IOLoop to fall back to Mojo::Reactor::Poll if Perl has been
    compiled with fork emulation.

6.63  2016-06-03
  - Removed deprecated check method from Mojo::Server::Morbo.
  - Removed deprecated build, compile and interpret methods from Mojo::Template.
  - Removed deprecated multi_accept methods from Mojo::IOLoop,
    Mojo::IOLoop::Server and Mojo::Server::Daemon.
  - Updated jQuery to version 2.2.4.
  - Improved generator commands not to overwrite existing files.

6.62  2016-05-14
  - Removed deprecated is_debug, is_error, is_info and is_warn methods from
    Mojo::Log.
  - Improved support for Ubuntu on Windows.

6.61  2016-04-30
  - Improved Mojo::Server::Daemon to no longer log when a connection has been
    closed prematurely.
  - Fixed bug in Mojo::Content where the drain event would not always be emitted
    for dynamically generated content with a Content-Length header.

6.60  2016-04-25
  - Fixed bug in Mojo::IOLoop where stopping gracefully would sometimes result
    in connections getting closed too early. (anparker, sri)

6.59  2016-04-22
  - Removed deprecated xss_escape function from Mojo::Util.
  - Improved HTML Living Standard compliance of Mojo::DOM::HTML.
  - Improved Mojo::Server::Daemon to log when a connection has been closed
    prematurely.